<resources>
    <string name="app_name">SmartFam</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Sign up</string>
    <string name="login">Login</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset_instructions">We just need your registered Email address to sent you password reset instructions</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_short">Password too short. Enter minimum 8 characters!</string>
    <string name= "email_not_registered">Email has not been registered</string>
    <string name="password_wrong">Oops. Password wrong!</string>
    <string name="login_successful">Login Successful</string>
    <string name="is_complete">is complete</string>
    <string name="on_complate">on complate</string>
    <string name="email_registered">Email has been already registered</string>
    <string name="successful">Successful</string>

</resources>